--- a/Authors_Complete/CyprusAirQuality_complete.Rmd
+++ b/Authors_Complete/CyprusAirQuality_complete.Rmd
@@ -3,8 +3,8 @@ title: "Air Quality in Cyprus - An Evaluation based on Kriging"
 author: "John Dow, Jane Wod"
 date: "13 Juni 2019"
 output:
-  word_document: default
   html_document: default
+  word_document: default
   pdf_document: default
 ---
 
@@ -23,18 +23,26 @@ Kriging is an interpolation method from the 1950s that has been widely applied. 
 
 The methodology builds on data provided by the European Environment Agency (EEA): air quality data and metadata about air quality stations in Europe. The analysis is done with R - following the kriging procedure presented in: https://keen-swartz-3146c4.netlify.com/interpolation.html 
 
-The first step is to load the required data and perform data preprocessing.
 
-```{r data input, echo= FALSE}
+```{r load_libraries, echo=FALSE, message=FALSE, warning=FALSE}
+if(!require(sf)) {
+  install.packages("sf", repos="https://cran.rstudio.com") }
+# library(sf)
+library(here)
+library(xts)
+library(tidyverse)
+library(cshapes)
+```
+
+After loading required libraries, the first step is to load the required data and perform data preprocessing.
+```{r data_input, echo=TRUE}
 # Fake paper based on the first part of Chapter 16 of Spatial Data Science book
 # https://keen-swartz-3146c4.netlify.com/interpolation.html 
 
 # Link to hourly (time series) data on Air Quality, Cyprus, 2017. Source: EEA
 # https://fme.discomap.eea.europa.eu/fmedatastreaming/AirQualityDownload/AQData_Extract.fmw?CountryCode=CY&CityName=&Pollutant=8&Year_from=2017&Year_to=2017&Station=&Samplingpoint=&Source=E1a&Output=TEXT&UpdateDate=
 
-library(here)
-
-data_aq <- here("data", "aq")
+data_aq <- here::here("Authors_Complete", "data", "aq")
 
 # Read all files into a list
 files <- list.files(data_aq, pattern = "*.csv", full.names = TRUE)
@@ -52,18 +60,15 @@ names(r) <-  sapply(r, function(f) unique(f$AirQualityStationEoICode))
 length(r) == length(unique(names(r)))
 
 # Combine files based on time
-library(xts)
 r <- lapply(r, function(f) xts(f$Concentration, f$t))
 aq <- do.call(cbind, r)
-
 
 # remove stations with more than 75% missing values:
 sel <- apply(aq, 2, function(x) sum(is.na(x)) < 0.75 * 365 * 24)
 aqsel <- aq[, sel] # stations are in columns
 
 # Read name stations and filter for ones in Cyprus
-library(tidyverse)
-a2 <- read.csv(here("data", "AirBase_v8_stations.csv"), sep = "\t", stringsAsFactors = FALSE) %>% 
+a2 <- read.csv(here::here("Authors_Complete", "data", "AirBase_v8_stations.csv"), sep = "\t", stringsAsFactors = FALSE) %>% 
   as_tibble  %>% 
   filter(country_iso_code == "CY")
 
@@ -72,34 +77,30 @@ a2 <- read.csv(here("data", "AirBase_v8_stations.csv"), sep = "\t", stringsAsFac
 
 Once the subset of data is available, the spatial perspective on the data can be exploited. 
 
-```{r spatial transformation, echo=FALSE}
+```{r spatial_transformation, echo=FALSE}
 # Spatial transformation  
-library(sf)
-library(stars)
-a2.sf <- st_as_sf(a2, coords = c("station_longitude_deg", "station_latitude_deg"), crs = 4326)
+a2.sf <- sf::st_as_sf(a2, coords = c("station_longitude_deg", "station_latitude_deg"), crs = 4326)
 
 sel <-colnames(aqsel) %in% a2$station_european_code
 aqsel <- aqsel[, sel]
 
 tb <- tibble(NO2 = apply(aqsel, 2, mean, na.rm = TRUE), station_european_code = colnames(aqsel))
-crs <- 3857 # Mercator
-no2.sf <- right_join(a2.sf, tb) %>% st_transform(crs)  
+no2.sf <- right_join(a2.sf, tb) %>% st_transform(crs = 4326)  
 ```
 
 The next step is the posting of data, i.e. plotting a map that shows how the air quality stations are distributed across the study area. The result of data posting for available air quality stations in Cyprus is displayed in Figure 1.
 
-```{r, echo= FALSE}
+```{r plot_map, echo=FALSE}
 # load Cyprus boundaries
-library(cshapes)
 cshp <- cshp(as.Date("2000-01-1"))
 cy <- cshp[cshp$ISONAME == "Cyprus",]
-cy.sf <- st_transform(st_as_sf(cy), crs)
+cy.sf <- st_transform(st_as_sf(cy), crs=4326)
 
 # Map making
 ggplot() + 
   geom_sf(data=cy.sf) + 
   geom_sf(data=no2.sf, mapping = aes(col = NO2)) + 
-  geom_sf_text(data = no2.sf, aes(label = station_local_code), colour = "black", size=2, nudge_y = -1) + 
+  geom_sf_text(data = no2.sf, aes(label = station_local_code), colour = "black", size=2, nudge_y = -0.05) + 
   theme_bw()
 
 ```
